# project-m36-typed

./: README.md  project-m36-typed.cabal  stack.yaml
benchmark/: Benchmark.hs
src/ProjectM36/: Typed.hs
src/ProjectM36/Typed/: Execute.hs  Gen.hs  Generics.hs  Internal.hs  Ops.hs  Schema.hs  TypeFunctions.hs  Types.hs  Wrapped.hs
src/ProjectM36/Typed/DB/: Types.hs
src/ProjectM36/Typed/Wrapped/: Helper.hs  Redundant.hs
test/: Test.hs
